--- a/.gitignore
+++ b/.gitignore
@@ -70,8 +70,5 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
-# Editor-based Rest Client
-.idea/httpRequests
-
-# Android studio 3.1+ serialized cache file
-.idea/caches/build_file_checksums.ser
+# PyCharm files
+.idea/
